[package]
name = "hamachi-tui"
version = "0.1.0"
edition = "2024"
authors = ["Jonathon Rau"]
description = "A terminal user interface for managing Hamachi VPN networks on Linux"
license = "MIT"
repository = "https://github.com/jlrau/hamachi-tui"
keywords = ["hamachi", "vpn", "tui", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
